nx-libs (2:3.5.0.12-0) UNRELEASED; urgency=low

  [ Mike Gabriel ]
  * Update patch: 001_add-main-makefile.full+lite.patch, adapt patch from
    packaging. Test for Makefiles in subfolders before calling them.
    Fixes build failure during ,,make distclean'' calls.

  [ Mihai Moldovan ]
  * Add patch: 051_nxcomp_macos105-fdisset.full+lite.patch, work around
    issue in Mac OS X 10.5 SDK.

  [ Oleksandr Shneyder ]
  * Create patch: 203_nxagent_disable-rootless-exit.full.patch.
    Add command line argument "-norootlessexit".
    Usually, nxagent exits after 30 seconds if running in rootless mode
    and no X-Clients are present.  Starting nxagent with option "-norootlessexit"
    will change this behaviour.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 22 Feb 2012 15:05:38 +0100

nx-libs (2:3.5.0.11-0) unstable; urgency=low

  [ Mike Gabriel ]
  * Use ,,$(MAKE) -C'' in main Makefile for calling Makefiles in subdirectories,
    make build stanza work for nx-libs-full and nx-libs-lite.
  * Do not install libXinerama directly into /usr/lib/nx. Recommended method is
    installing to /usr/lib/nx/Xinerama, so that you can enable/disable usage of
    the Xinerama extension.
  * Update patch: 001_add-main-makefile.full+lite.patch, use curly braces for
    macros.
  * Enable parallel build for Debian package.
  * Merge honor-ac-dirs.patch from Jan Engelhardt (OpenSUSE) with already
    existing Makefile patches (012_nxcomp..., 013_nxcompext_...,
    014_nxcompshad_...).
  * Rename patches 030_nx-X11_... and 031_nx-X11_..., the tarball roll script
    currently requires ,,full'' or ,,full+lite'' in the file name.
  * Make patch headers DEP5 compliant (030_nx-X11_... and 031_nx-X11_...).
  * Update patch: 001_add-main-makefile.full+lite.patch, fix missing
    $(CONFIGURE) variable.
  * Update patches: 012_nxcomp..., 013_nxcompext_..., 014_nxcompshad_....
    Also make use of $(LIBFULL) in Makefile.in's install and uninstall stanzas.