@@ -7,7 +7,8 @@ nx-libs (2:3.5.0.12-0) UNRELEASED; urgency=low
 
   [ Mihai Moldovan ]
   * Add patch: 051_nxcomp_macos105-fdisset.full+lite.patch, work around
-    issue in Mac OS X 10.5 SDK.
+    issue in Mac OS X 10.5 SDK. Pass address of fd_set structs on the stack
+    to the FD_ISSET macro/function, instead of the struct itself.
 
   [ Oleksandr Shneyder ]
   * Create patch: 203_nxagent_disable-rootless-exit.full.patch.
